--- a/dot_config/pianobar/config
+++ b/dot_config/pianobar/config
@@ -2,3 +2,4 @@ user = myemail@yahoo.com
 password = mypass
 sort = quickmix_01_name_az
 autostart_station = 247782624866357578
+tls_fingerprint = 2D0AFDAFA16F4B5C0A43F3CB1D4752F9535507C0
