--- a/bash/bashrc.d/S20git_ruby_shell_prompt.rc
+++ b/bash/bashrc.d/S20git_ruby_shell_prompt.rc
@@ -1,5 +1,4 @@
-# Aliases and functions to help with git, github (and RVM) operations
-# unless commented out, this file will affect the PS1 shell prompt
+# By default, this file will affect the PS1 shell prompt
 
 #
 # Build a better shell prompt
@@ -64,29 +63,3 @@ function prompt_git_ruby {
 
 # actually change the prompt
 prompt_git_ruby
-
-# shorten github urls
-function shorten() {
-  curl -s -S -i http://git.io -F "url=$1" | grep Location | cut -d " " -f 2
-}
-
-# update all given git branches with latest from upstream
-# default to master branch if no args given
-function up {
-  git fetch upstream
-  # default to updating the master branch if no branches supplied
-  if [ -n "$1" ];then
-    branches="$@"
-  else
-    branches="master"
-  fi
-
-  for branch in $branches; do
-    git checkout $branch
-    stash=$(git stash save)
-    git fetch
-    git rebase upstream/master
-    # if anything got stashed, reapply it?
-    [ "$stash" != "No local changes to save" ] && git stash pop
-  done
-}; export -f up
