--- a/bash/aliases.d/S90_app_aliases.rc
+++ b/bash/aliases.d/S90_app_aliases.rc
@@ -3,4 +3,4 @@
 #
 
 # For OS X
-alias itunes_real="/Applications/iTunes.app/Contents/MacOS/iTunesX"
+[ -n "$IS_OSX" ] && alias itunes_real="/Applications/iTunes.app/Contents/MacOS/iTunesX"
