--- a/bash/bashrc.d/S10default_shell_prompt.rc
+++ b/bash/bashrc.d/S10default_shell_prompt.rc
@@ -4,7 +4,7 @@
 
 # set variable identifying the chroot you work in (used in the prompt below)
 if [ -z "$debian_chroot" -a -r /etc/debian_chroot ]; then
-    debian_chroot=$(cat /etc/debian_chroot)
+    debian_chroot=$(cat /etc/debian_chroot) 2>/dev/null
 fi
 
 # set a fancy prompt (non-color, unless we know we "want" color)
