--- a/bash/functions.d/S20input_output.rc
+++ b/bash/functions.d/S20input_output.rc
@@ -5,21 +5,21 @@
 # most of these functions will check the length of var $quiet and will not
 # output anything (or less at least) if $quiet is not empty, allows scripts
 # to do stuff like if [ "$arg" == "-q" ]; then quiet=1;fi
-function puts {
+puts() {
   # echos '[*] ' and arguments with the -e and -n flags (to stdout)
   # only print something if quiet is empty
   [ -z "$quiet" ] && echo -en "[*] $@"
 }
 export -f puts
 
-function eqo {
+eqo() {
   # echos the arguments with no frills, but only if not quiet
   # only print something if quiet is empty
   [ -z "$quiet" ] && echo "$@"
 }
 export -f eqo
 
-function warn {
+warn() {
   # warnings, i.e. non-fatal errors to stdout
   # echos '[-] ' and arguments with the -e and -n flags (to stdout)
   # only print something if quiet is empty or not empty but less than a value?
@@ -29,7 +29,7 @@ function warn {
 }
 export -f warn
 
-function die {
+die() {
   # fatal or nearly-fatal errors, if you give a second argument, it is used as an exit code
   # echos '[!] ' and first argument with the -e and -n flags and redirect to stderr
   # if a second argument is given, this function will exit with that argument as the code
@@ -44,20 +44,20 @@ investigate() {
   # if $3 isn't given, don't prefix output with anything
   local output_prefix='' # could be something like [*]
   if [ -n "$3" ]; then output_prefix="$3";fi
- 
+
   # if $2 isn't given, default separator to something
   local output_sep=": " # could be ", " ": " etc
   if [ -n "$2" ]; then output_sep="$2";fi
- 
+
   # if $1 is given, then good, if not, well jeez, don't do anything
   local var2investigate=''
   if [ -n "$1" ]; then
-    var2investigate="$1"
-    echo -n "${output_prefix}${var2investigate}${output_sep}"     
-    v='echo -n $'
-    v="${v}$(echo -n $var2investigate)"
-    eval $v
-    echo
+   var2investigate="$1"
+   echo -n "${output_prefix}${var2investigate}${output_sep}"
+   v='echo -n $'
+   v="${v}$(echo -n $var2investigate)"
+   eval $v
+   echo
   fi
 }
 export -f investigate
