--- a/bash/load_drop_directories.rc
+++ b/bash/load_drop_directories.rc
@@ -1,32 +1,46 @@
-# bash drop directory hook
+#
+# BASH drop directory hook
+#
 
-# To enable debug output, uncomment the following line
-export DEBUG_DOT_FILES="true" && current="~/.bash_profile"
-[ -n "$DEBUG_DOT_FILES" ] && echo "Running inside $current"
+orig_indent=$indent
+current="load_drop_directories.rc"
+debug "Running inside $current"
 
 run_scripts()
 {
-    for script in $(ls "$1"/S* | sort); do
-      [ -n "$DEBUG_DOT_FILES" ] && echo "Checking for $script"
+  script_dir="$1"
+  if [ -d $script_dir ]; then
+    for script in $(ls "$script_dir"/S*.rc 2>/dev/null | sort); do
+      debug "Checking for $script"
       # skip non-existent (regular), non-executable, or zero-length files
       if [ -f "$script" -a -x "$script" -a -s "$script" ]; then
-        echo "Executing $script"
+        debug "Sourcing $script"
+        indent+="$INDENT_VAL"
         source $script
         if [ $? != 0 ]; then
-          echo "$script returned error code $?"
+          # display error even if debug is off
+          echo "$indent$script returned error code $?"
+          indent=$orig_indent
         else
-          echo "$script completed successfully"
+          debug "$script completed successfully"
+          indent=$orig_indent
         fi
       else
-        msg = "$script was not executed because it's either not a regular file,"
-        msg = "$msg it's not executable, or it has a zero length."
-        echo $msg
+        local msg="$script was not executed because it's either not a regular file,"
+        msg+=" it's not executable, or it has a zero length."
+        debug "$msg"
       fi
     done
+  else
+    debug "$script_dir does not exist"
+  fi
 }
-# export -f run_scripts
+export -f run_scripts
 
 # run bashrc.d files first, code there is usually more setup-oriented
-run_scripts ~/bashrc.d
-run_scripts ~/aliases.d   # export those you want available to child processes
-run_scripts ~/functions.d # export -f those you want available to child processes
+drop_dirs="$HOME/bashrc.d $HOME/private.d $HOME/aliases.d $HOME/functions.d"
+for d in $drop_dirs; do
+  debug "Loading drop directory:$d"
+  run_scripts "$d"
+  # NOTE:  make sure scripts export -f any functions you want available to child processes
+done
