--- a/bash/functions.d/S70git_helpers.rc
+++ b/bash/functions.d/S70git_helpers.rc
@@ -3,14 +3,14 @@
 #
 
 # shorten github urls
-function shorten() {
+git_shorten() {
   curl -s -S -i http://git.io -F "url=$1" | grep Location | cut -d " " -f 2
 }
 export -f shorten
 
 # update all given git branches with latest from upstream
 # default to master branch if no args given
-function up {
+up() {
   git fetch upstream
   # default to updating the master branch if no branches supplied
   if [ -n "$1" ];then
