try to fix 'script returned error code 0

--- a/bash/load_drop_directories.rc
+++ b/bash/load_drop_directories.rc
@@ -17,7 +17,7 @@ run_scripts()
         debug "Sourcing $script"
         indent+="$INDENT_VAL"
         source $script
-        if [ $? != 0 ]; then
+        if [ "$?" -ne "0" ]; then
           # display error even if debug is off
           echo "$indent$script returned error code $?"
           indent=$orig_indent
