update vimrc and add t and pastebin aliases

--- a/bash/aliases.d/S90_app_aliases.rc
+++ b/bash/aliases.d/S90_app_aliases.rc
@@ -4,5 +4,8 @@
 
 debug "app_aliases.rc"
 
+alias tl='t timeline -r -l'
+alias pastebin='pastebin -l ruby -e N '
+
 # For OS X
 [ -n "$IS_OSX" ] && alias itunes_real="/Applications/iTunes.app/Contents/MacOS/iTunesX"
