--- a/bash/bashrc.d/S30load_rvm.rc
+++ b/bash/bashrc.d/S30load_rvm.rc
@@ -2,6 +2,6 @@
 # make sure RVM gets loaded as a function (for system-wide installs)
 #
 debug "load_rvm"
-script=~/etc/profile.d/rvm.sh
+script="/etc/profile.d/rvm.sh"
 # source $script if it's a regular file which is executable and non-zero-length
 [ -f "$script" -a -x "$script" -a -s "$script" ] && source $script
