--- a/bash/functions.d/S70git_helpers.rc
+++ b/bash/functions.d/S70git_helpers.rc
@@ -2,6 +2,12 @@
 # Functions to help with git, github operations
 #
 
+# show commit "stats"
+git_stats() {
+  git nicelog --merges --since=2014-01-01 | grep -i land | cut -f 2 -d "<" | sort | uniq -c | sort -nr
+}
+export -f git_stats
+
 # shorten github urls
 git_shorten() {
   curl -s -S -i http://git.io -F "url=$1" | grep Location | cut -d " " -f 2
