--- a/msf/msfconsole.rc
+++ b/msf/msfconsole.rc
@@ -10,16 +10,19 @@ alias -f sa show advanced
 alias -f se show evasion
 # set/use
 alias -f pay set PAYLOAD
+alias -f met set PAYLOAD windows/meterpreter/reverse_tcp
 alias -f multi use exploit/multi/handler
 alias -f psexec use exploit/windows/smb/psexec
 alias -f ss set SESSION
 # sessions
 alias -f s sessions -l -v
+alias -f slv sessions -l -v
 alias -f sk sessions -k
 alias -f sK sessions -K
 alias -f si sessions -i
 # jobs
 alias -f j jobs -l -v
+alias -f jlv jobs -l -v
 alias -f jk jobs -k
 alias -f jK jobs -K
 # networking
