updates msfconsole.rc w/additional aliases

--- a/msf/msfconsole.rc
+++ b/msf/msfconsole.rc
@@ -8,21 +8,20 @@ load alias
 alias -f so show options
 alias -f sa show advanced
 alias -f se show evasion
+alias -f st show targets
+alias -f sp show payloads
 # set/use
 alias -f pay set PAYLOAD
-alias -f met set PAYLOAD windows/meterpreter/reverse_tcp
 alias -f multi use exploit/multi/handler
 alias -f psexec use exploit/windows/smb/psexec
 alias -f ss set SESSION
 # sessions
 alias -f s sessions -l -v
-alias -f slv sessions -l -v
 alias -f sk sessions -k
 alias -f sK sessions -K
 alias -f si sessions -i
 # jobs
 alias -f j jobs -l -v
-alias -f jlv jobs -l -v
 alias -f jk jobs -k
 alias -f jK jobs -K
 # networking
