adds tls script

--- a/dot_config/pianobar/config
+++ b/dot_config/pianobar/config
@@ -2,4 +2,16 @@ user = myemail@yahoo.com
 password = mypass
 sort = quickmix_01_name_az
 autostart_station = 247782624866357578
+
+##
+## A simple little shell script that will return the current
+##  fingerprint on the SSL certificate.  It's crude but works :D
+##
+## Author: Bob Saska (r35krag0th) <git@r35.net>
+ 
+#openssl s_client -connect tuner.pandora.com:443 < /dev/null 2> /dev/null | \
+#    openssl x509 -noout -fingerprint | tr -d ':' | cut -d'=' -f2
+
 tls_fingerprint = 2D0AFDAFA16F4B5C0A43F3CB1D4752F9535507C0
+
+# save as ~/.config/pianobar/config
