add eval, seems to make zsh happier

--- a/bash/functions.d/S80transfer.sh.rc
+++ b/bash/functions.d/S80transfer.sh.rc
@@ -15,7 +15,7 @@ transfer() {
       curl_cmd="${curl_cmd} ${site}"
       ;;
   esac
-  res=$(echo $($curl_cmd) | grep -i $site)
+  res=$(echo $(eval $curl_cmd) | grep -i $site)
   echo
   echo "res--${res}--res"
   echo "Download url(s):"
