--- a/bash/functions.d/S80transfer.sh.rc
+++ b/bash/functions.d/S80transfer.sh.rc
@@ -17,7 +17,7 @@ transfer() {
   esac
   res=$(echo $(eval $curl_cmd) | grep -i $site)
   echo
-  echo "res--${res}--res"
+  #echo "res--${res}--res"
   echo "Download url(s):"
   echo $res
   echo "Combinined/compressed downloads:"
