adds crappy version of fastrm

--- a/bash/functions.d/S20input_output.rc
+++ b/bash/functions.d/S20input_output.rc
@@ -63,3 +63,19 @@ investigate() {
   fi
 }
 export -f investigate
+
+function fastrm {
+	# if perl is readily available, use it's 'unlink' to remove stuff, it's much faster than 'rm'
+	# This is a hack to keep the syntax the same as that for 'rm' and to avoid
+	#  invoking 'perl -nle' a bunch of times, which would be somewhat counterproductive
+	#  There's a smarter way using 'find' find $DIR -type f -exec perl -nle unlink '{}' \;
+	if [ $(which perl) ] &>/dev/null; then
+		templist=
+		for item in "$@"; do templist="${templist}${item}\n";done
+		echo -en $templist | perl -nle unlink
+	else
+		# else use rm -rf as the fall back
+		rm -rf "$@"
+	fi
+}
+export fastrm
