--- a/msf/msfconsole.rc
+++ b/msf/msfconsole.rc
@@ -3,7 +3,9 @@
 # Aliases
 #
 ###
+
 load alias
+
 # show
 alias -f so show options
 alias -f sa show advanced
@@ -11,28 +13,33 @@ alias -f se show evasion
 alias -f st show targets
 alias -f sp show payloads
 alias -f sact show actions
+
 # set/use
 alias -f pay set PAYLOAD
 alias -f multi use exploit/multi/handler
 alias -f psexec use exploit/windows/smb/psexec
 alias -f ss set SESSION
+
 # sessions
 alias -f s sessions -l -v
 alias -f slv session -l -v
 alias -f sk sessions -k
 alias -f sK sessions -K
 alias -f si sessions -i
+
 # jobs
 alias -f j jobs -l -v
 alias -f jlv jobs -l -v
 alias -f jk jobs -k
 alias -f jK jobs -K
+
 # networking
 #alias -f ip ifconfig || ipconfig
+alias -f ip "ip addr show" || ifconfig || ipconfig
 # the one below just picks the interfaces starting with 192
-#   it will also blow up on windows.  Too bad, so sad.
-alias -f myip "ip addr show" || ifconfig || ipconfig
+#   it will also blow up on window but you can change the grep to findstr if you need to
 #alias -f myip "ifconfig | grep 'inet 192' | cut -d ' ' -f 2"
+
 # miscellaneous
 alias -f in_mem execute -H -i -c -m -d calc.exe -f
 # alias -f sockit setg Proxies SOCKS5:127.0.0.1:9050
